@@ -48,7 +48,19 @@
 					<button id="cdefault" class="btn">Default</button>
 				</td>
 			</tr>
-
+			
+			<tr>
+				<td height=30>
+					<font color="8bc53f">Show "Install Steam" button in header:</font>
+				</td>
+				<td>
+					<select id="showinstallsteambutton" class="dropdown">
+						<option value="Yes">Yes</option>
+						<option value="No">No</option> 
+					</select>
+				</td>
+			</tr>
+			
 			<tr>
 				<td height=30>
 					<font color="8bc53f">Show 3rd Party DRM Warnings:</font>
